--- a/angular.json
+++ b/angular.json
@@ -57,6 +57,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+             "proxyConfig": "src/proxy.conf.json"
+           },
           "configurations": {
             "production": {
               "buildTarget": "Angular_Resume2024:build:production"
